# ChangeLog for sys-apps/portage
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*portage-2.1.20.5400 (27 Dec 2006)

  27 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5377.ebuild, -portage-2.1.20.5380.ebuild,
  -portage-2.1.20.5396.ebuild, +portage-2.1.20.5400.ebuild:
  New snapshot, add back --with-default-path again, which seems to have been
  dropped by accident.

*portage-2.1.20.5396 (26 Dec 2006)

  26 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5336.ebuild, +portage-2.1.20.5396.ebuild:
  New snapshot with fix in emerge --sync code

*portage-2.1.20.5380 (24 Dec 2006)

  24 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5320.ebuild, +portage-2.1.20.5380.ebuild:
  Cosmetic fixes in emerge --info output

*portage-2.1.20.5377 (24 Dec 2006)

  24 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5376.ebuild, +portage-2.1.20.5377.ebuild:
  Fix for repoman not accepting inter-revision ebuilds

*portage-2.1.20.5376 (24 Dec 2006)

  24 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5284.ebuild, +portage-2.1.20.5376.ebuild:
  New snapshot with fixes/cleanup from the main trunk. Includes special prefix
  inter-revision version support

*portage-2.1.20.5336 (20 Dec 2006)

  20 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5261.ebuild, +portage-2.1.20.5336.ebuild:
  New snapshot with fix for a bug which caused weird python behaviour
  introduced in 5320

*portage-2.1.20.5320 (18 Dec 2006)

  18 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5226.ebuild, +portage-2.1.20.5320.ebuild:
  New snapshot, mainly performance improvements

*portage-2.1.20.5284 (13 Dec 2006)

  13 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  -portage-2.1.20.5188.ebuild, +portage-2.1.20.5284.ebuild:
  New snapshot

*portage-2.1.20.5261 (10 Dec 2006)

  10 Dec 2006; Fabian Groffen <grobian@gentoo.org>