@@ -3,14 +3,19 @@ MD5 42d21376da7d6dfff6fdbc82923f5823 files/05portage.envd 58
 RMD160 ce02934f1d6402739ad05af5db0e577d216695ed files/05portage.envd 58
 SHA256 3caa7956606d288cffaca28d4016c5f75e24ff55307d9d8c1c889f2dba67da06 files/05portage.envd 58
 DIST prefix-portage-2.1.20.5400.tar.bz2 531778 RMD160 fcf0deb18d894d4e392ab22469b58f71c87be671 SHA1 84a95432310df2bc9a2d60a63810b22fb43861bf SHA256 9d3208be4570eb0213d9cd61dd3cff901ee91d8ec5977e340f09df27a9b154bf
+DIST prefix-portage-2.1.20.5447.tar.bz2 536502 RMD160 6f2c4caf09dbe07c5c775a7a13e2c4e9be6c082d SHA1 c5d70804775e8b0dd5a98c339672427a9fc0921a SHA256 c15ab7fb72b95a6c9a3742cae72c61e0c9bc4dd14b9aa83af738bd218b6c004e
 EBUILD portage-2.1.20.5400.ebuild 2694 RMD160 e9cac5151d1c2c863380ed6f59085074e071883f SHA1 ff97eaf1068c79ba99de4738c3a75fdada6c65b6 SHA256 223b660923c357630ae2812c6850454fb287922402c1a8f2833459662681faa8
 MD5 c62e0095983c98d1f543f8860df2cbba portage-2.1.20.5400.ebuild 2694
 RMD160 e9cac5151d1c2c863380ed6f59085074e071883f portage-2.1.20.5400.ebuild 2694
 SHA256 223b660923c357630ae2812c6850454fb287922402c1a8f2833459662681faa8 portage-2.1.20.5400.ebuild 2694
-MISC ChangeLog 6894 RMD160 fea78de07405e2c1191d61cce4dd98444774ba8e SHA1 a1972fd6c47a354d0d5a1d8cf44b4d451f99dbe1 SHA256 5b34d6461eb8633655bf33bd7a38af4b271a213fd3eb1516df09cb9c80f966a3
-MD5 9bd064e1a4358d5fd6dfe7bf5e24e72a ChangeLog 6894
-RMD160 fea78de07405e2c1191d61cce4dd98444774ba8e ChangeLog 6894
-SHA256 5b34d6461eb8633655bf33bd7a38af4b271a213fd3eb1516df09cb9c80f966a3 ChangeLog 6894
+EBUILD portage-2.1.20.5447.ebuild 2694 RMD160 e9cac5151d1c2c863380ed6f59085074e071883f SHA1 ff97eaf1068c79ba99de4738c3a75fdada6c65b6 SHA256 223b660923c357630ae2812c6850454fb287922402c1a8f2833459662681faa8
+MD5 c62e0095983c98d1f543f8860df2cbba portage-2.1.20.5447.ebuild 2694
+RMD160 e9cac5151d1c2c863380ed6f59085074e071883f portage-2.1.20.5447.ebuild 2694
+SHA256 223b660923c357630ae2812c6850454fb287922402c1a8f2833459662681faa8 portage-2.1.20.5447.ebuild 2694
+MISC ChangeLog 7021 RMD160 2dc9da8a24671f7afa50090e9932fe35cbccc462 SHA1 0ecbbcefc7201214551eb11490adcaf28fcba004 SHA256 475a55a48b652437f89f0465726810bb77ab0b773394ab24dda433fa96161034
+MD5 32e88de7c3e5e65de88dc82ba856b874 ChangeLog 7021
+RMD160 2dc9da8a24671f7afa50090e9932fe35cbccc462 ChangeLog 7021
+SHA256 475a55a48b652437f89f0465726810bb77ab0b773394ab24dda433fa96161034 ChangeLog 7021
 MISC metadata.xml 219 RMD160 d57be2957eef304b1967d9c119ef412b1cff2d6c SHA1 07786c8b39e25515daa8d6e641e253806588bc0a SHA256 c39855626c28cd33b4a037fb3da53aed9e32faf2fe104d9e957f153c8a4eca29
 MD5 81251c03c4b31c24fca8e726c7803045 metadata.xml 219
 RMD160 d57be2957eef304b1967d9c119ef412b1cff2d6c metadata.xml 219
@@ -18,3 +23,6 @@ SHA256 c39855626c28cd33b4a037fb3da53aed9e32faf2fe104d9e957f153c8a4eca29 metadata
 MD5 3e65443e23c2b75196530d50b1b331c1 files/digest-portage-2.1.20.5400 283
 RMD160 5ba823838d2cfba22e26971908ab1a6b9916e711 files/digest-portage-2.1.20.5400 283
 SHA256 4e9f94dcdb4519bc9e56be1cc5bd6b35c9459b59246d8bb5964b767acb4fe3ab files/digest-portage-2.1.20.5400 283
+MD5 3060c863d6be20910f23edbbd91ad3e7 files/digest-portage-2.1.20.5447 283
+RMD160 7ac78866dfa58e36ae978d8675ed622b1a898fdd files/digest-portage-2.1.20.5447 283
+SHA256 842cbc5c33c70d919c23771921bd694d8658ecc2a6ade75edd70eb7e0e938efa files/digest-portage-2.1.20.5447 283
