@@ -1,0 +1,3 @@
+MD5 9463c07faa959744820ef67b2da31df6 prefix-portage-2.1.20.5447.tar.bz2 536502
+RMD160 6f2c4caf09dbe07c5c775a7a13e2c4e9be6c082d prefix-portage-2.1.20.5447.tar.bz2 536502
+SHA256 c15ab7fb72b95a6c9a3742cae72c61e0c9bc4dd14b9aa83af738bd218b6c004e prefix-portage-2.1.20.5447.tar.bz2 536502
