@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jan 2007; Fabian Groffen <grobian@gentoo.org> ChangeLog:
+  New snapshot, doesn't install sed wrapper in usr/bin any more
 
 *portage-2.1.20.5400 (27 Dec 2006)
 
